--- a/app/pages/properties/metafiltercomponents/metafilter.component.html
+++ b/app/pages/properties/metafiltercomponents/metafilter.component.html
@@ -18,7 +18,8 @@
                     </select>
                 </div>
                 <div class="col-xs-9">
-                    <input type="text" value="Amsterdam,Washington,Sydney,Beijing" class="tagsinput" data-role="tagsinput" data-color="success" />
+                    {{propertyForm.controls.MetaDataTmp.controls['type_' + subtype.Id].value | json}}
+                    <input type="text" [value]="propertyForm.controls.MetaDataTmp.controls['type_' + subtype.Id].value" class="tagsinput" data-role="tagsinput" data-color="success" />
                     <!-- You can change data-color="rose" with one of our colors primary | warning | info | danger | success -->
                 </div>
             </div>
