--- a/app/pages/properties/properties.component.css
+++ b/app/pages/properties/properties.component.css
@@ -38,7 +38,7 @@
     background-color: #c6c6c6;
     text-align: center;
     color: #fff;
-    padding-top: 2px;
+    line-height: 18px;
     display: inline-block;
 }
 
