--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -145,10 +145,16 @@ body.sidebar-mini .sidebar .nav mainfilter-cmp {
 
 
 /**
+ *  Font
+ */
+.font-16 {
+	font-size: 16px;
+}
+
+/**
  *  Form style
 */
 .form-control, .form-group .form-control {
-	color: #5399bc;
 	background-image: linear-gradient(#5399bc, #5399bc), linear-gradient(#5399bc, #5399bc);
 }
 .control-label {
@@ -186,6 +192,26 @@ body.sidebar-mini .sidebar .nav mainfilter-cmp {
 	text-transform: uppercase;
 	font-size: 14px;
 }
+.togglebutton label input[type=checkbox]:checked + .toggle {
+	background-color: #0b5a7c;
+}
+.togglebutton label .toggle, .togglebutton label input[type=checkbox][disabled] + .toggle {
+	width: 41px;
+	height: 18px;
+	background-color: rgba(80, 80, 80, 0.7);
+}
+.togglebutton label input[type=checkbox][disabled] + .toggle {
+	background-color: rgba(80, 80, 80, 0.7);
+}
+.togglebutton label .toggle:after {
+	width: 28px;
+	height: 28px;
+	border-radius: 14px;
+	background-color: #ffffff;
+	border: 0;
+	top: -6px;
+	left: -1px;
+}
 .select-with-transition {
 	background-image: linear-gradient(#5399bc, #5399bc), linear-gradient(#5399bc, #5399bc) !important;
 }
@@ -217,7 +243,7 @@ body.sidebar-mini .sidebar .nav mainfilter-cmp {
 	background-color: #5399bc;
 	box-shadow: 0px 7px 12px 0 rgba(83, 153, 188, 0.4);
 }
-.btn.btn-success:hover, .btn.btn-success:active, .btn.btn-success:focus, .btn.btn-success:focus:active {
+.btn.btn-success:hover, .btn.btn-success:active, .btn.btn-success:focus, .btn.btn-success:focus:active, .btn.btn-success:active:hover {
 	background-color: #0b5a7c;
 	box-shadow: 0px 7px 12px 0 rgba(83, 153, 188, 0.4);
 }
@@ -226,7 +252,7 @@ body.sidebar-mini .sidebar .nav mainfilter-cmp {
 	background-color: #b71c1c;
 	box-shadow: 0px 7px 12px 0 rgba(183, 28, 28, 0.4);
 }
-.btn.btn-danger:hover, .btn.btn-danger:active, .btn.btn-danger:focus, .btn.btn-danger:focus:active {
+.btn.btn-danger:hover, .btn.btn-danger:active, .btn.btn-danger:focus, .btn.btn-danger:focus:active, .btn.btn-danger:active:hover {
 	box-shadow: 0px 7px 12px 0 rgba(183, 28, 28, 0.4);
 }
 
