--- a/app/pages/properties/editproperty/editproperty.component.html
+++ b/app/pages/properties/editproperty/editproperty.component.html
@@ -74,23 +74,23 @@
                                 <propertymarketing-cmp [group]="propertyForm"></propertymarketing-cmp>
                             </div>
 
-                            <div id="metatab-property-4" class="card-content p-l-r-none p-t-none" *ngIf="mainService.metadata[3] && isLoad">
+                            <div id="metatab-property-4" class="card-content p-t-none" *ngIf="mainService.metadata[3] && isLoad">
                                 <property-metafilter-cmp [group]="propertyForm" [metadata]="mainService.metadata[3]"></property-metafilter-cmp>
                             </div>
 
-                            <div id="metatab-property-3" class="card-content p-l-r-none p-t-none" *ngIf="mainService.metadata[2] && isLoad">
+                            <div id="metatab-property-3" class="card-content p-t-none" *ngIf="mainService.metadata[2] && isLoad">
                                 <property-metafilter-cmp [group]="propertyForm" [metadata]="mainService.metadata[2]" #localActivities></property-metafilter-cmp>
                             </div>
 
-                            <div id="metatab-property-6" class="card-content p-l-r-none p-t-none" *ngIf="mainService.metadata[5] && isLoad">
+                            <div id="metatab-property-6" class="card-content p-t-none" *ngIf="mainService.metadata[5] && isLoad">
                                 <property-metafilter-cmp [group]="propertyForm" [metadata]="mainService.metadata[5]" #features></property-metafilter-cmp>
                             </div>
 
-                            <div id="metatab-property-2" class="card-content p-l-r-none p-t-none" *ngIf="mainService.metadata[1] && isLoad">
+                            <div id="metatab-property-2" class="card-content p-t-none" *ngIf="mainService.metadata[1] && isLoad">
                                 <property-metafilter-cmp [group]="propertyForm" [metadata]="mainService.metadata[1]" #services></property-metafilter-cmp>
                             </div>
 
-                            <div id="metatab-property-1" class="card-content p-l-r-none p-t-none" *ngIf="mainService.metadata[0] && isLoad">
+                            <div id="metatab-property-1" class="card-content p-t-none" *ngIf="mainService.metadata[0] && isLoad">
                                 <property-metafilter-cmp [group]="propertyForm" [metadata]="mainService.metadata[0]" #trip></property-metafilter-cmp>
                             </div>
                         </div>
