--- a/app/pages/properties/editproperty/editproperty.component.html
+++ b/app/pages/properties/editproperty/editproperty.component.html
@@ -62,36 +62,113 @@
                         </ul>
                         <div class="tab-content m-l-r-20-negative m-t-25">
                             <!--  Property Info  -->
-                            <div id="metatab-info" class="active card-content p-l-r-none p-t-none" *ngIf="isLoad">
+                            <div id="metatab-info" class="active card-content p-b-none p-l-r-none p-t-none" *ngIf="isLoad">
                                 <propertyinfo-cmp [group]="propertyForm"></propertyinfo-cmp>
+                                <div class="card-content p-b-none">
+                                    <div class="row">
+                                        <div class="col-xs-offset-6 col-xs-6">
+                                            <a href="#metatab-images" role="tab" data-toggle="tab" class="btn btn-success pull-right">Next</a>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                             <!--  Property Image  -->
-                            <div id="metatab-images" class="card-content p-l-r-none p-t-none" *ngIf="isLoad">
+                            <div id="metatab-images" class="card-content p-b-none p-l-r-none p-t-none" *ngIf="isLoad">
                                 <propertyimage-cmp [group]="propertyForm"></propertyimage-cmp>
+                                <div class="card-content p-b-none">
+                                    <div class="row">
+                                        <div class="col-xs-6">
+                                            <a href="#metatab-info" role="tab" data-toggle="tab" class="btn btn-success">Back</a>
+                                        </div>
+                                        <div class="col-xs-6">
+                                            <a href="#metatab-availability" role="tab" data-toggle="tab" class="btn btn-success pull-right">Next</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!--  Property Availability -->
+                            <div id="metatab-availability" class="card-content p-b-none p-l-r-none p-t-none" *ngIf="isLoad">
+                                <div class="card-content p-b-none">
+                                    <div class="row">
+                                        <div class="col-xs-6">
+                                            <a href="#metatab-images" role="tab" data-toggle="tab" class="btn btn-success">Back</a>
+                                        </div>
+                                        <div class="col-xs-6">
+                                            <a href="#metatab-marketing" role="tab" data-toggle="tab" class="btn btn-success pull-right">Next</a>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                             <!--  Property Marketing  -->
-                            <div id="metatab-marketing" class="card-content p-l-r-none p-t-none" *ngIf="isLoad">
+                            <div id="metatab-marketing" class="card-content p-b-none p-l-r-none p-t-none" *ngIf="isLoad">
                                 <propertymarketing-cmp [group]="propertyForm"></propertymarketing-cmp>
+                                <div class="card-content p-b-none">
+                                    <div class="row">
+                                        <div class="col-xs-6">
+                                            <a href="#metatab-availability" role="tab" data-toggle="tab" class="btn btn-success">Back</a>
+                                        </div>
+                                        <div class="col-xs-6">
+                                            <a href="#metatab-property-4" role="tab" data-toggle="tab" class="btn btn-success pull-right">Next</a>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
 
-                            <div id="metatab-property-4" class="card-content p-t-none" *ngIf="mainService.metadata[3] && isLoad">
+                            <div id="metatab-property-4" class="card-content p-b-none p-t-none" *ngIf="mainService.metadata[3] && isLoad">
                                 <property-metafilter-cmp [group]="propertyForm" [metadata]="mainService.metadata[3]"></property-metafilter-cmp>
+                                <div class="row">
+                                    <div class="col-xs-6">
+                                        <a href="#metatab-marketing" role="tab" data-toggle="tab" class="btn btn-success">Back</a>
+                                    </div>
+                                    <div class="col-xs-6">
+                                        <a href="#metatab-property-3" role="tab" data-toggle="tab" class="btn btn-success pull-right">Next</a>
+                                    </div>
+                                </div>
                             </div>
 
-                            <div id="metatab-property-3" class="card-content p-t-none" *ngIf="mainService.metadata[2] && isLoad">
+                            <div id="metatab-property-3" class="card-content p-b-none p-t-none" *ngIf="mainService.metadata[2] && isLoad">
                                 <property-metafilter-cmp [group]="propertyForm" [metadata]="mainService.metadata[2]" #localActivities></property-metafilter-cmp>
+                                <div class="row">
+                                    <div class="col-xs-6">
+                                        <a href="#metatab-property-4" role="tab" data-toggle="tab" class="btn btn-success">Back</a>
+                                    </div>
+                                    <div class="col-xs-6">
+                                        <a href="#metatab-property-6" role="tab" data-toggle="tab" class="btn btn-success pull-right">Next</a>
+                                    </div>
+                                </div>
                             </div>
 
-                            <div id="metatab-property-6" class="card-content p-t-none" *ngIf="mainService.metadata[5] && isLoad">
+                            <div id="metatab-property-6" class="card-content p-b-none p-t-none" *ngIf="mainService.metadata[5] && isLoad">
                                 <property-metafilter-cmp [group]="propertyForm" [metadata]="mainService.metadata[5]" #features></property-metafilter-cmp>
+                                <div class="row">
+                                    <div class="col-xs-6">
+                                        <a href="#metatab-property-3" role="tab" data-toggle="tab" class="btn btn-success">Back</a>
+                                    </div>
+                                    <div class="col-xs-6">
+                                        <a href="#metatab-property-2" role="tab" data-toggle="tab" class="btn btn-success pull-right">Next</a>
+                                    </div>
+                                </div>
                             </div>
 
-                            <div id="metatab-property-2" class="card-content p-t-none" *ngIf="mainService.metadata[1] && isLoad">
+                            <div id="metatab-property-2" class="card-content p-b-none p-t-none" *ngIf="mainService.metadata[1] && isLoad">
                                 <property-metafilter-cmp [group]="propertyForm" [metadata]="mainService.metadata[1]" #services></property-metafilter-cmp>
+                                <div class="row">
+                                    <div class="col-xs-6">
+                                        <a href="#metatab-property-6" role="tab" data-toggle="tab" class="btn btn-success">Back</a>
+                                    </div>
+                                    <div class="col-xs-6">
+                                        <a href="#metatab-property-1" role="tab" data-toggle="tab" class="btn btn-success pull-right">Next</a>
+                                    </div>
+                                </div>
                             </div>
 
-                            <div id="metatab-property-1" class="card-content p-t-none" *ngIf="mainService.metadata[0] && isLoad">
+                            <div id="metatab-property-1" class="card-content p-b-none p-t-none" *ngIf="mainService.metadata[0] && isLoad">
                                 <property-metafilter-cmp [group]="propertyForm" [metadata]="mainService.metadata[0]" #trip></property-metafilter-cmp>
+                                <div class="row">
+                                    <div class="col-xs-6">
+                                        <a href="#metatab-property-2" role="tab" data-toggle="tab" class="btn btn-success">Back</a>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
