--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -124,6 +124,9 @@ body.sidebar-mini .sidebar .nav mainfilter-cmp {
 .p-t-none {
 	padding-top: 0px !important;
 }
+.p-b-none {
+	padding-bottom: 0px !important;
+}
 .p-l-r-20 {
 	padding-left: 20px !important;
 	padding-right: 20px !important;
@@ -265,6 +268,7 @@ body.sidebar-mini .sidebar .nav mainfilter-cmp {
  * Custom button
  */
 .btn.btn-success {
+	min-width: 92px;
 	padding: 12px 15px;
 	background-color: #5399bc;
 	box-shadow: 0px 7px 12px 0 rgba(83, 153, 188, 0.4);
@@ -274,6 +278,7 @@ body.sidebar-mini .sidebar .nav mainfilter-cmp {
 	box-shadow: 0px 7px 12px 0 rgba(83, 153, 188, 0.4);
 }
 .btn.btn-danger {
+	min-width: 92px;
 	padding: 12px 15px;
 	background-color: #b71c1c;
 	box-shadow: 0px 7px 12px 0 rgba(183, 28, 28, 0.4);
