--- a/app/app.component.html
+++ b/app/app.component.html
@@ -4,6 +4,14 @@
     <!-- <div class="sidebar" data-color="red" data-image=""> -->
         <sidebar-cmp></sidebar-cmp>
         <div class="sidebar-background primary-color"></div>
+        <div class="navbar navbar-transparent">
+            <div class="navbar-minimize">
+                <button id="minimizeSidebar" class="btn btn-round btn-white btn-fill btn-just-icon">
+                    <i class="material-icons visible-on-sidebar-regular">chevron_left</i>
+                    <i class="material-icons visible-on-sidebar-mini">chevron_right</i>
+                </button>
+            </div>
+        </div>
     </div>
     <div class="main-panel">
         <navbar-cmp></navbar-cmp>
