fixed font size btm

--- a/app/pages/properties/editproperty/editproperty.component.html
+++ b/app/pages/properties/editproperty/editproperty.component.html
@@ -180,7 +180,7 @@
                         </div>
                     </div>
                     <div class="col-xs-4">
-                        <button class="btn btn-success pull-right m-r-20 p-l-r-20" type="submit">Save</button>
+                        <button class="btn btn-success pull-right m-r-20 p-l-r-20 font-16" type="submit">Save</button>
                         <div class="togglebutton pull-right">
                             <label>
                                 <input type="checkbox" formControlName="Active" *ngIf="isLoad"> Active status
