added valid view

--- a/app/pages/properties/addproperty/addproperty.component.html
+++ b/app/pages/properties/addproperty/addproperty.component.html
@@ -63,7 +63,7 @@
                         <div class="tab-content m-l-r-20-negative m-t-25">
                             <!--  Property Info  -->
                             <div id="metatab-info" class="fade active in card-content p-b-none p-l-r-none p-t-none" *ngIf="isLoad">
-                                <propertyinfo-cmp [group]="propertyForm"></propertyinfo-cmp>
+                                <propertyinfo-cmp [group]="propertyForm" [errorForm]="errorForm"></propertyinfo-cmp>
                                 <div class="card-content p-b-none">
                                     <div class="row">
                                         <div class="col-xs-offset-6 col-xs-6">
