--- a/app/components/calendar/calendar.component.css
+++ b/app/components/calendar/calendar.component.css
@@ -1,29 +1,3 @@
-.housekeeperstate >div.radio {
-	display: inline-block;
-}
-
-.housekeeperstate {
-	padding-top: 20px;
-}
-
-.points-of-interest table {
-	margin: 40px 15px 20px 15px;
-}
-
-.points-of-interest table tr td {
-	padding: 10px 5px;
-}
-
-.points-of-interest table tr td .checkbox {
-	max-height: 20px;
-}
-
-
-/*  Features  */
-.features {
-	margin-top: 30px;
-}
-
-.checkbox label, .radio label {
-	color: black;
+.card-calendar .fc td:first-child {
+	border-left-width: 1px;
 }
