--- a/app/pages/properties/addproperty/addproperty.component.html
+++ b/app/pages/properties/addproperty/addproperty.component.html
@@ -70,8 +70,10 @@
                                 <propertyimage-cmp [group]="propertyForm"></propertyimage-cmp>
                             </div>
                             <!--  Property Availability -->
-                            <div id="metatab-availability" class="fade card-content p-b-none p-l-r-none p-t-none">
-                                <calendar-cmp [group]="propertyForm"></calendar-cmp>
+                            <div id="metatab-availability" class="fade card-content p-b-none p-t-none">
+                                <!--
+                                    <calendar-cmp [group]="propertyForm"></calendar-cmp>
+                                -->
                             </div>
                             <!--  Property Marketing  -->
                             <div id="metatab-marketing" class="fade card-content p-b-none p-l-r-none p-t-none">
